# simulation_FOC

./: .gitignore  FOC.plecs  FOC.plecs.autosave  README.md
code/: CMakeLists.txt  main.cpp  stdafx.h
code/components/: AngleUnwrapper.h  CMakeLists.txt  Controllers.cpp  Controllers.h  FOC.cpp  FOC.h  SVM.cpp  SVM.h  TrajectoryPlanner.cpp  TrajectoryPlanner.h
code/global/: CMakeLists.txt  filter.cpp  filter.h  type.cpp  type.h
code/ports/: CMakeLists.txt  dllheader.h  dllmain.cpp
